# Simulation_damage_detect

./: README.md  check_environment.sh  install_airsim_deps.sh  install_dependencies.sh  run_full_system.sh  setup_airsim_env.sh  start_damage_detect_system.sh  step_detection.txt  test_airsim_connection.py  test_pose_reading.py
src/damage_detect/: CMakeLists.txt  package.xml  setup.sh  test_config.py
src/damage_detect/config/: detect_params.yaml
src/damage_detect/launch/: damage_detect.launch
src/damage_detect/models/: README.md
src/damage_detect/models/best/: data.pkl
src/damage_detect/scripts/: defect_detector_node.py  tracker.py  utils.py
src/damage_detect/src/: airsim_recorder_node.cpp
